# IsoEngine

IsoForge/: .clang-format  .gitignore  03_ARCHITECTURE.md  06_RENDERING_AND_VIEWPORT.md  07_ISOMETRIC_SYSTEM.md  11_EDITOR_PANELS.md  12_LOGGING_AND_CONSOLE.md  14_PERFORMANCE_GUIDELINES.md  CMakeLists.txt  CMakePresets.json  IsoForge TDD.txt  README.md  imgui.ini
IsoForge/docs/: 00_PROJECT_OVERVIEW.md  01_REQUIREMENTS.md  02_TECH_STACK.md  04_FOLDER_STRUCTURE.md  05_RUNTIME_EDITOR_SEPARATION.md  06_RENDERING_AND_VIEWPORT.md  07_ISOMETRIC_SYSTEM.md  08_SCENE_AND_ECS.md  09_SERIALIZATION.md  10_ASSET_SYSTEM.md  13_BUILD_SYSTEM.md  15_DEVELOPMENT_PHASES.md  16_CODEX_TASK_RULES.md  17_FIRST_IMPLEMENTATION_TASK.md  18_WORKFLOW_DIAGRAMS.md  README.md
IsoForge/editor/: CMakeLists.txt
IsoForge/editor/include/editor/: EditorApp.h  EditorCamera.h  EditorState.h  ImGuiLayer.h
IsoForge/editor/include/editor/panels/: AssetBrowserPanel.h  ConsolePanel.h  HierarchyPanel.h  InspectorPanel.h  Panel.h  SceneViewportPanel.h  TilePalettePanel.h
IsoForge/editor/src/: EditorApp.cpp  EditorCamera.cpp  ImGuiLayer.cpp  main.cpp
IsoForge/editor/src/panels/: AssetBrowserPanel.cpp  ConsolePanel.cpp  HierarchyPanel.cpp  InspectorPanel.cpp  SceneViewportPanel.cpp  TilePalettePanel.cpp
IsoForge/engine/: CMakeLists.txt
IsoForge/engine/include/engine/assets/: AssetManager.h
IsoForge/engine/include/engine/core/: Application.h
IsoForge/engine/include/engine/iso/: IsoGridRenderer.h  IsoMath.h  TilemapData.h
IsoForge/engine/include/engine/platform/: OpenGLContext.h  Window.h
IsoForge/engine/include/engine/renderer/: Framebuffer.h  Texture2D.h
IsoForge/engine/include/engine/serialization/: TilemapSerializer.h
IsoForge/engine/src/assets/: AssetManager.cpp
IsoForge/engine/src/core/: Application.cpp
IsoForge/engine/src/iso/: IsoGridRenderer.cpp  TilemapData.cpp
IsoForge/engine/src/platform/: OpenGLContext.cpp  Window.cpp
IsoForge/engine/src/renderer/: Framebuffer.cpp  Texture2D.cpp
IsoForge/engine/src/serialization/: TilemapSerializer.cpp
IsoForge/sandbox_project/tilemaps/: Village_01.json  debug_tilemap.json  test_02.json
